# Model_Builder_Tool

./: .gitignore  CMakeLists.txt  README.md  ResultsView.cpp.bak  build.bat  install_dependencies.ps1  temp.txt
.cursor/: launch.json  settings.json  tasks.json
src/: main.cpp
src/backends/: imgui_impl_fltk.cpp  imgui_impl_fltk.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/data/: CSVReader.cpp  CSVReader.h  DataFrame.cpp  DataFrame.h
src/gui/: DataTable.cpp  DataTable.h  ExportDialog.cpp  ExportDialog.h  FileSelector.cpp  FileSelector.h  HyperparameterSelector.cpp  HyperparameterSelector.h  MainWindow.cpp  MainWindow.h  ModelSelector.cpp  ModelSelector.h  PlotGLWindow.cpp  PlotGLWindow.h  PlotNavigator.cpp  PlotNavigator.h  PlotWidget.cpp  PlotWidget.h  ResultsView.h  Resultsview.cpp  VariableSelector.cpp  VariableSelector.h
src/include/: DependencyConfig.h
src/models/: ElasticNet.cpp  ElasticNet.h  GradientBoosting.cpp  GradientBoosting.h  LinearRegression.cpp  LinearRegression.h  Model.h  NeuralNetwork.cpp  NeuralNetwork.h  RandomForest.cpp  RandomForest.h  XGBoost.cpp  XGBoost.h
src/plotting/: matplotlibcpp.h
src/plotting_scripts/: plot_regression.py
src/util/: Logger.h
src/utils/: Logger.h  PlottingUtility.cpp  PlottingUtility.h
